fix: align carousel image to top of slide

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   position: relative;
   opacity: 0;
   visibility: hidden;
